--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
-scapy
-neo4j
-fire
-gevent
-flask
-flask_socketio
+bidict==0.22.0
+click==8.1.3
+fire==0.4.0
+Flask==2.1.2
+Flask-SocketIO==5.2.0
+gevent==21.12.0
+greenlet==1.1.2
+h11==0.13.0
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+neo4j==4.4.4
+python-engineio==4.3.2
+python-socketio==5.6.0
+pytz==2022.1
+scapy==2.4.5
+simple-websocket==0.5.2
+six==1.16.0
+termcolor==1.1.0
+Werkzeug==2.1.2
+wsproto==1.1.0
+zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
